[package]
name = "satrunner_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3.28"
pretty_env_logger = "0.5.0"
log = "0.4"
tokio-stream = "0.1.14"
glam = "0.24.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
speedy = {version = "0.8.6", features = ["uuid"]}
# zebedee-rust = "0.4.4"
zebedee-rust = { path = "/Users/stu/stuff/zebedee-rust" }
serde_json = "1.0.103"


[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[profile.release]
lto = true
opt-level = 3
